# retrieval-finetune-harness

./: .gitignore  README.md  app.py  embed-hf.py  help.md  income.py  pyproject.toml  testing.ipynb
app/scripts/: embed-cohere.py  embed-hf.py  embed-openai.py  generate-queries.py  scrape-articles.py
app/src/: Preprocessor.py  QueryGenerator.py
data/: bi_encoder_training  bi_encoder_training.csv  cross_encoder_training.csv  evidence_corpus.csv
scripts/: embed-openai.py
src/: ArticleScraper.py  BertTrainingPipeline.py  BiEncoderPipeline.py  ClimateFeverDataLoader.py  CustomTrainer.py  DataTransformer.py  DistilBertDot.py  EmbeddingsGenerator.py  EvalPipeline.py  FinetuningPipeline.py  GPLTrainingPipeline.py  GenshinWikiLoader.py  IncomeDataset.py  JPQModel.py  LocalHTMLDataloader.py  MediaWikiPreprocessor.py  OpenAIChain.py  Preprocessor.py  ReRankEvalPipeline.py  TransformerEmbeddings.py  datasets.json
src/old/: BertTrainingPipeline.py  BiEncoderPipeline.py  CustomTrainer.py  __init__.py
