[tool.poetry]
name = "gordy's retrieval finetune harness"
version = "0.0.1"
description = "simple interface for finetuning document retrievers"
authors = ["Gordy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
gradio = "*"
pandas = "*"
hnswlib = "*"
torch = "*"
datasets = "*"
transformers = "*"
matplotlib = "*"
tqdm = "*"
wandb = "*"
faiss-cpu = "*"
mwxml = "^0.3.3"
mwparserfromhell = "^0.6.5"
mwtypes = {git = "https://github.com/mediawiki-utilities/python-mwtypes", rev = "updates_schema_0.11"}
langchain = "^0.0.295"
cohere = "^4.27"
openai = "^0.28.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.4"
unstructured = "^0.10.16"
bs4 = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
